[package]
name = "bootstrap"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true
readme.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
