[package]
name = "client"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true
readme.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootstrap = { path = "../bootstrap" }
network = { path = "../network" }
crypto = { path = "../crypto" }
avalanche-types = {path = "../../crates/avalanche-types"}
log = "0.4.20"
env_logger = "0.10.0"
tokio = "1.32.0"
mio = "0.8.8"
hex = "0.4.3"
cert-manager = "0.0.10"
