[package]
name = "crypto"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true
readme.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = "0.4.20"
byteorder = "1.4"
ring = { version = "0.17.2", features = ["std"] }
lazy_static = "1.4.0"
hex="0.4.3"
thiserror="1.0.49"