[package]
name = "network"
version = "0.0.1"
edition = "2021"
rust-version = "1.70" # use "rustup override set stable" to overwrite current toolchain
publish = false
description = "Avalanche network"
license-file = "LICENSE"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/avalanche-rs/tree/main/core/network"
readme = "README.md"

[dependencies]
avalanche-types = { path = "../../crates/avalanche-types", features = ["message"] }
crypto = {path = "../crypto"}
x509-certificate = "0.21.0"
cert-manager = "0.0.10" # https://github.com/gyuho/cert-manager
hex = "0.4.3"
log = "0.4.20"
rustls = { version = "0.21.5", features = ["logging", "dangerous_configuration"]} # https://github.com/rustls/rustls/tags
rcgen = "0.10.0"
hyper = { version = "0.14.27", features = ["full"], optional = true }
tokio-rustls = { version = "0.24.1", optional = true }
mio={version = "0.8.8", features=["os-poll", "net"]}
# for feature "pem"
pem = { version = "3.0.0", optional = true }
random-manager = "0.0.5"
thiserror="1.0.49"
prost = "0.11.9"
zstd = "0.12.4"

[dev-dependencies]
env_logger = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]
default = ["rustls", "pem_encoding"]
rustls = ["hyper", "tokio-rustls"]
pem_encoding = ["pem"]

[[example]]
name = "peer_outbound_ping"
required-features = ["rustls", "pem_encoding"]

[package.metadata.cargo-udeps.ignore]
normal = ["hyper", "tokio-rustls"]
